Fix old analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -613,8 +613,8 @@
     "from dynamic_analysis import add_pose_to_df\n",
     "from wall_analysis import get_psd\n",
     "\n",
-    "exp_name = '2020_11_23_wall2'; DISTANCE_LIST = np.arange(100, step=10)\n",
-    "#exp_name = '2020_11_26_wall'; DISTANCE_LIST = np.arange(50)\n",
+    "#exp_name = '2020_11_23_wall2'; DISTANCE_LIST = np.arange(100, step=10)\n",
+    "exp_name = '2020_11_26_wall'; DISTANCE_LIST = np.arange(50)\n",
     "\n",
     "#fname = f'results/{exp_name}_simulated.pkl'\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
@@ -782,10 +782,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from wall_analysis import filter_by_dicts\n",
     "try:\n",
-    "    row = df_total[(df_total.distance==40) & (df_total.degree==0) & (df_total.source=='sweep')].iloc[0]\n",
+    "    filter_dict = dict(\n",
+    "        distance=40,\n",
+    "        degree=0,\n",
+    "        source='sweep'\n",
+    "    )\n",
+    "    df = filter_by_dicts(df_total, [filter_dict])\n",
+    "    row = df.iloc[0]\n",
+    "    \n",
     "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
-    "\n",
+    "    \n",
     "    plt.figure()\n",
     "    times = np.arange(spec.shape[0])\n",
     "    plt.pcolormesh(times, frequencies, np.log10(spec.T))\n",
@@ -797,14 +805,15 @@
     "        plt.semilogy(frequencies, np.abs(psd[i_mic, :]), label=f\"mic{i_mic}\")\n",
     "    plt.xlabel('frequency [Hz]')\n",
     "    plt.ylabel('PSD')\n",
-    "    plt.title(f'degree {degree}, distance {distance}')\n",
+    "    plt.title(filter_dict)\n",
     "except ValueError:\n",
     "    raise\n",
-    "except:\n",
-    "    print('did not find 90, 81, sweep in')\n",
+    "except Exception as e:\n",
+    "    print(f'did not find {filter_dict} in')\n",
     "    print(df_total.distance.unique())\n",
     "    print(df_total.degree.unique())\n",
-    "    print(df_total.source.unique())"
+    "    print(df_total.source.unique())\n",
+    "    print(e)"
    ]
   },
   {
@@ -818,11 +827,12 @@
     "degrees = [d for d in df_total.degree.unique() if d != 360][:2]\n",
     "distances = df_total.distance.unique()[:3]\n",
     "source = 'sweep'\n",
+    "print(distances, degrees)\n",
     "\n",
-    "fig, axs = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True)\n",
+    "fig, axs = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True, squeeze=False)\n",
     "fig.set_size_inches(10, 10*axs.shape[0]/axs.shape[1])\n",
     "\n",
-    "fig_psd, axs_psd = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True)\n",
+    "fig_psd, axs_psd = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True, squeeze=False)\n",
     "fig_psd.set_size_inches(10, 10*axs.shape[0]/axs.shape[1])\n",
     "for i, distance in enumerate(distances):\n",
     "    for j, degree in enumerate(degrees):\n",
@@ -855,8 +865,8 @@
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "\n",
-    "distance_ref = 90\n",
     "distances = df_total.distance.unique()[:3]\n",
+    "distance_ref = sorted(df_total.distance.unique())[-1]\n",
     "source = 'sweep'\n",
     "n_mics = df_total.iloc[0].signals_f.shape[1]\n",
     "print('n_mics:', n_mics)\n",
@@ -866,6 +876,8 @@
     "    df_ref = df_total.loc[(df_total.distance == distance_ref)\n",
     "                           & (df_total.degree == degree)\n",
     "                           & (df_total.source == source)]\n",
+    "    if len(df_ref) == 0:\n",
+    "        continue\n",
     "\n",
     "    fig, axs = plt.subplots(1, n_mics, sharex=True, sharey=True)\n",
     "    fig.set_size_inches(15, 5)\n",
@@ -898,19 +910,20 @@
     "chosen_frequencies = frequencies[[30]]\n",
     "print(chosen_frequencies)\n",
     "\n",
-    "distance_ref = 90\n",
+    "distances = df_total.distance.unique()\n",
+    "\n",
     "mic = 0\n",
     "\n",
-    "for degree in [0, 27, 54, 81][:2]:\n",
-    "    distances = df_total.distance.unique()\n",
+    "for degree, df in df_total.groupby('degree'):\n",
     "    source = 'sweep'\n",
     "\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(15, 5)\n",
     "    for i, distance in enumerate(distances):\n",
-    "        df_this = df_total.loc[(df_total.distance == distance)\n",
-    "                               & (df_total.degree == degree)\n",
-    "                               & (df_total.source == source)]\n",
+    "        df_this = df.loc[(df.distance == distance)\n",
+    "                       & (df.source == source)]\n",
+    "        if len(df_this) == 0:\n",
+    "            continue\n",
     "        row = df_this.iloc[0]\n",
     "        for f, freq in enumerate(chosen_frequencies):\n",
     "            chosen_idx = np.where(frequencies == freq)[0][0]\n",
@@ -940,6 +953,9 @@
     "#source = 'None'\n",
     "source = 'mono4125'\n",
     "degree = 360\n",
+    "\n",
+    "if not degree in df_total.degree.unique():\n",
+    "    raise ValueError('cannot do moving angle analysis on this dataset')\n",
     "\n",
     "distances = df_total.distance.unique()[:3]\n",
     "chosen_idx = np.where(frequencies == freq)[0][0]\n",
@@ -975,15 +991,9 @@
     "    ax.set_title(distance)\n",
     "    ax.set_ylim(0.05, 10)\n",
     "    ax.legend()\n",
-    "    [ax.grid() for ax in axs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    [ax.grid() for ax in axs]\n",
+    "    \n",
+    "    \n",
     "plt.figure()\n",
     "plt.scatter(distances, averages)\n",
     "plt.xlabel('distance [cm]')\n",
