Add theory predictions to analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -104,10 +104,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from wall_analysis import filter_by_dicts\n",
+    "\n",
     "snr = 0\n",
     "appendix = \"\"\n",
     "chosen_dicts = []\n",
@@ -125,6 +128,13 @@
     "df_chosen = filter_by_dicts(df_freq, chosen_dicts)\n",
     "assert len(df_chosen) == 2*len(chosen_dicts), len(df_chosen)# times 2 because of mic_type\n",
     "df_chosen.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## spectrograms"
    ]
   },
   {
@@ -235,10 +245,132 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#TODO: continue here"
+    "from wall_analysis import filter_by_dicts\n",
+    "\n",
+    "snr = 1\n",
+    "appendix = \"\"\n",
+    "chosen_dicts = []\n",
+    "for d in df_freq.distance.unique():\n",
+    "    for deg in df_freq.degree.unique():\n",
+    "        if deg == 0:\n",
+    "            motors = [\"all43000\", 0]\n",
+    "        else:\n",
+    "            motors = [0]\n",
+    "\n",
+    "        for m in motors:\n",
+    "            chosen_dicts += [\n",
+    "                {\"motors\":m, \"appendix\":appendix, \"snr\":snr, \"distance\":d, \"degree\":deg}\n",
+    "            ]\n",
+    "df_chosen = filter_by_dicts(df_freq, chosen_dicts)\n",
+    "assert len(df_chosen) == 2*len(chosen_dicts), len(df_chosen)\n",
+    "df_chosen.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## spectrograms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "mic_type = 'audio_deck'\n",
+    "\n",
+    "filters = ['source', 'degree', 'distance']\n",
+    "for chosen_tuple, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby(filters):\n",
+    "    fig, axs = plt.subplots(1, 2, squeeze=False, sharex=True, sharey=True)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
+    "\n",
+    "    for j, motors in enumerate([0, \"all43000\"]):\n",
+    "        df_this = df_source[df_source.motors==motors]\n",
+    "        if len(df_this) != 1:\n",
+    "            continue\n",
+    "        row = df_this.iloc[0]\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            #axs[0, j].scatter(row.seconds, row.frequencies_matrix[:, i], label=i)\n",
+    "            axs[0, j].scatter(range(len(row.seconds)), row.frequencies_matrix[:, i], label=i)\n",
+    "        axs[0, j].set_title(f'motors {motors}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## frequency slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from constants import SPEED_OF_SOUND\n",
+    "from wall_analysis import extract_psd_dict, extract_psd\n",
+    "from simulation import get_freq_slice_pyroom, get_freq_slice_theory\n",
+    "    \n",
+    "sys.path.append(f'../experiments/{exp_name}/')\n",
+    "from params import MIN_FREQ, MAX_FREQ\n",
+    "    \n",
+    "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
+    "\n",
+    "df_audio_deck = df_chosen[df_chosen.mic_type=='audio_deck']\n",
+    "\n",
+    "for (distance, motors), df_this in df_audio_deck.groupby(['distance', 'motors']):\n",
+    "    \n",
+    "    if motors != 0:\n",
+    "        continue\n",
+    "        \n",
+    "    fig, axs = plt.subplots(2, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "\n",
+    "    if len(df_this) != 1: \n",
+    "        print(f\"{len(df_this)} findings for {distance}, {mic_type}, {motors}\")\n",
+    "        continue\n",
+    "\n",
+    "    row = df_this.iloc[0]\n",
+    "    \n",
+    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, min_t=60, max_t=190, n_freq=4)\n",
+    "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
+    "    \n",
+    "    signal = pd.read_pickle('results/multi.pk')\n",
+    "    slices_theory = get_freq_slice_theory(frequencies, distance_cm=distance)\n",
+    "    slices_pyroom = get_freq_slice_pyroom(frequencies, distance_cm=distance, signal=signal)\n",
+    "    for mic_idx in CHOSEN_MICS:\n",
+    "        axs[0, mic_idx].plot(frequencies, psd[mic_idx], label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
+    "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
+    "\n",
+    "        axs[1, mic_idx].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory')\n",
+    "        axs[1, mic_idx].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom')\n",
+    "        axs[1, mic_idx].legend(loc='lower left')\n",
+    "        #spec_fft = np.fft.rfft(spec)[1:]\n",
+    "        #freqs = np.fft.rfftfreq(len(spec), mean_f)[1:] # \"seconds\"\n",
+    "        #axs[1, mic_idx].plot(1/freqs, np.abs(spec_fft), color=f'C{mic_idx}')\n",
+    "        #axs[1, mic_idx].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
+    "    axs[0, mic_idx].set_yscale('log')\n",
+    "    \n",
+    "    expected_period = SPEED_OF_SOUND / (2 * distance * 1e-2) # m/s / m = Hz\n",
+    "    #axs[0, mic_idx].legend(loc='upper right')\n",
+    "    #axs[0, mic_idx].set_xlim(0,50)\n",
+    "    #axs[1, mic_idx].set_xlim(1e-1,50)\n",
+    "    #axs[0, j].set_ylim(min(spec), max(spec))"
    ]
   },
   {
