--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -31,124 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crazyflie_description_py.parameters import MIC_POSITIONS, FS, N_BUFFER\n",
-    "import pyroomacoustics as pra\n",
-    "from audio_stack.beam_former import rotate_mics\n",
-    "\n",
-    "DURATION_SEC = 38\n",
-    "N_TIMES = DURATION_SEC * FS // (N_BUFFER * 2)\n",
-    "D0 = 0.1 # distance between mic and source, in meters\n",
-    "Y_OFFSET = 0.1  \n",
-    "YAW_OFFSET = -120\n",
-    "ROOM_DIM = [10, 8]\n",
-    "print(MIC_POSITIONS)\n",
-    "\n",
-    "def generate_rir(distance_cm=0, yaw_deg=0, single_mic=False, ax=None):\n",
-    "    # simplification1: attenuation normally depends on pressure, humidity, frequency.\n",
-    "    # simplification 2: no extra loss at wall\n",
-    "    a = 10 # attenuation coefficient in dB / m, between 100-200 degrees, 4000+ Hz\n",
-    "    c = 343 # m/s\n",
-    "    Ts = 1 / FS\n",
-    "    offset = [0, Y_OFFSET + distance_cm * 1e-2]\n",
-    "    \n",
-    "    if single_mic:\n",
-    "        mic_positions = np.array([offset[0] + D0, offset[1]]).reshape((1, len(offset)))\n",
-    "    else:\n",
-    "        mic_positions = np.array(MIC_POSITIONS)\n",
-    "        mic_positions = offset + rotate_mics(mic_positions, YAW_OFFSET - yaw_deg)\n",
-    "            \n",
-    "    source = offset\n",
-    "    source_image = [0, -offset[1]]\n",
-    "\n",
-    "    if ax is not None:\n",
-    "        for i, mic in enumerate(mic_positions):\n",
-    "            ax.scatter(*mic, label=f'mic{i}')\n",
-    "        ax.plot([-1, 1], [0, 0], label='wall')\n",
-    "        ax.axis('equal')\n",
-    "        ax.set_xlim(-0.5, 0.5)\n",
-    "        ax.set_ylim(-1.0, 1.0)\n",
-    "        ax.scatter(*source, label='buzzer')\n",
-    "        ax.scatter(*source_image, label='buzzer image')\n",
-    "        ax.legend()\n",
-    "\n",
-    "    Hs = []\n",
-    "    for mic in mic_positions:\n",
-    "        direct_path = np.linalg.norm(mic - source)\n",
-    "        reflect_path = np.linalg.norm(mic - source_image)\n",
-    "        alpha0 = 10**(-a*direct_path/20)\n",
-    "        alpha1 = 10**(-a*reflect_path/20)\n",
-    "        n0 = direct_path / c \n",
-    "        n1 = reflect_path / c\n",
-    "        \n",
-    "        H_ij = alpha0 * np.exp(-1j*2*np.pi*frequencies_theo*n0) + alpha1 * np.exp(-1j*2*np.pi*frequencies_theo*n1)\n",
-    "        Hs.append(H_ij)\n",
-    "    return Hs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_room(distance_cm=0, yaw_deg=0, ax=None, single_mic=False, source='mono4125'):\n",
-    "    x_offset = ROOM_DIM[0] / 2\n",
-    "    \n",
-    "    m = pra.Material(energy_absorption=\"glass_3mm\")\n",
-    "    room = pra.ShoeBox(fs=FS, p=ROOM_DIM, max_order=1, materials=m)\n",
-    "\n",
-    "    offset = [x_offset, Y_OFFSET + distance_cm * 1e-2]\n",
-    "    \n",
-    "    if single_mic:\n",
-    "        mic_positions = np.array([offset[0] + D0, offset[1]]).reshape((1, len(offset)))\n",
-    "    else:\n",
-    "        mic_positions = np.array(MIC_POSITIONS)\n",
-    "        mic_positions = offset + rotate_mics(mic_positions, YAW_OFFSET - yaw_deg)\n",
-    "        \n",
-    "    signal = signals[source]\n",
-    "            \n",
-    "    room.add_source(offset, signal=signal)\n",
-    "\n",
-    "    beam_former = pra.Beamformer(mic_positions.T,  room.fs)\n",
-    "    room.add_microphone_array(beam_former)\n",
-    "    \n",
-    "    if ax is not None:\n",
-    "        for i, mic in enumerate(mic_positions):\n",
-    "            ax.scatter(*mic, label=f'mic{i}')\n",
-    "        ax.plot([0, ROOM_DIM[0]], [0, 0], label='wall')\n",
-    "        ax.axis('equal')\n",
-    "        ax.set_xlim(x_offset - 0.5, x_offset + 0.5)\n",
-    "        ax.set_ylim(-0.1, 1.0)\n",
-    "        ax.scatter(*offset, label='buzzer')\n",
-    "        ax.legend()\n",
-    "        \n",
-    "    return room\n",
-    "\n",
-    "\n",
-    "def get_signals_f(room, n_buffer=N_BUFFER, n_times=N_TIMES):\n",
-    "    room.simulate()\n",
-    "    \n",
-    "    assert (n_times * n_buffer) < room.mic_array.signals.shape[1], f\"{n_times}*{n_buffer}, {room.mic_array.signals.shape}\"\n",
-    "    \n",
-    "    signals_f_list = []\n",
-    "    idx = 0\n",
-    "    for _ in range(n_times):\n",
-    "        signals_f = np.fft.rfft(room.mic_array.signals[:, idx:idx+n_buffer], axis=1)\n",
-    "        signals_f_list.append(signals_f[None, ...])\n",
-    "        idx += n_buffer\n",
-    "    signals_f = np.concatenate(signals_f_list, axis=0)\n",
-    "    return signals_f\n",
-    "\n",
-    "def get_frequencies(fs, n_buffer=N_BUFFER):\n",
-    "    return np.fft.rfftfreq(n_buffer, 1/fs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sys.path.append('../crazyflie-audio/python/')\n",
     "from bin_selection import select_frequencies\n",
     "\n",
     "def buzzer_signal(source):\n",
@@ -158,12 +41,12 @@
     "        max_dB=-10,\n",
     "        Fs=FS,\n",
     "    )\n",
+    "    frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "    if source == 'mono4125':\n",
     "        return generate_signal(signal_type='mono', frequency_hz=4125, **kwargs)\n",
     "    elif source == 'random':\n",
     "        return generate_signal(signal_type='random', **kwargs)\n",
     "    elif source == 'multi':\n",
-    "        frequencies = get_frequencies(FS)\n",
     "        phase = np.random.uniform(0, 2*np.pi)\n",
     "        signal = generate_signal(signal_type='mono', frequency_hz=frequencies[1], **kwargs, phase_offset=phase)\n",
     "        for f in frequencies[2:]:\n",
@@ -171,7 +54,6 @@
     "            signal += generate_signal(signal_type='mono', frequency_hz=f, **kwargs, phase_offset=phase)\n",
     "        return signal\n",
     "    elif source == 'sweep':\n",
-    "        frequencies = get_frequencies(FS)\n",
     "        min_freq = 100\n",
     "        max_freq = 4400\n",
     "        bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
@@ -237,7 +119,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from simulation import generate_room, generate_rir\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(5, 5)\n",
     "room = generate_room(distance_cm=50, yaw_deg=0, ax=ax, single_mic=True)"
    ]
   },
@@ -248,11 +133,13 @@
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(1, 2)\n",
-    "fig.set_size_inches(15, 5)\n",
-    "room = generate_room(distance_cm=20, yaw_deg=0, ax=axs[0])\n",
+    "fig.set_size_inches(10, 5)\n",
+    "room = generate_room(distance_cm=0, yaw_deg=0, ax=axs[0])\n",
     "axs[0].set_title(0)\n",
-    "room = generate_room(distance_cm=50, yaw_deg=27, ax=axs[1])\n",
-    "axs[1].set_title(27)"
+    "room = generate_room(distance_cm=0, yaw_deg=90, ax=axs[1])\n",
+    "axs[1].set_title(90)\n",
+    "axs[0].legend(loc='lower left')\n",
+    "axs[1].legend(loc='lower left')"
    ]
   },
   {
@@ -261,11 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "frequencies_theo = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "\n",
     "for distance_cm in [10, 50]:\n",
     "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.suptitle(distance_cm)\n",
-    "    frequencies_theo = get_frequencies(FS)\n",
-    "    Hs = generate_rir(distance_cm=distance_cm, single_mic=True, ax=axs[0])\n",
+    "    Hs = generate_rir(frequencies_theo, distance_cm=distance_cm, single_mic=True, ax=axs[0])\n",
     "    for H in Hs:\n",
     "        axs[1].plot(frequencies_theo, np.abs(H))"
    ]
@@ -276,12 +165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#room = generate_room(distance_cm=50, single_mic=True, source='random')\n",
-    "#room = generate_room(distance_cm=50, single_mic=True, source='multi')\n",
-    "#room = generate_room(distance_cm=50, single_mic=True, source='mono4125')\n",
-    "room = generate_room(distance_cm=50, single_mic=True, source='sweep')\n",
-    "signals_f = get_signals_f(room)\n",
-    "frequencies = get_frequencies(room.fs)\n",
+    "from simulation import get_signals_f\n",
+    "room = generate_room(distance_cm=50, single_mic=True)\n",
+    "\n",
+    "signals_f = get_signals_f(room, signals['sweep'])\n",
+    "#signals_f = get_signals_f(room, signals['random'])\n",
+    "#signals_f = get_signals_f(room, signals['multi'])\n",
+    "#signals_f = get_signals_f(room, signals['mono4125'])\n",
+    "\n",
+    "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "\n",
     "fig, axs = plt.subplots(signals_f.shape[1], 1, sharex=True, squeeze=False)\n",
     "fig.set_size_inches(8, 2.5 * signals_f.shape[1])\n",
@@ -321,18 +213,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from simulation import get_freq_slice_pyroom\n",
+    "import progressbar\n",
+    "\n",
     "distances = np.linspace(0, 50, 100)\n",
-    "frequencies = get_frequencies(FS)\n",
+    "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "df_matrix = np.zeros((len(frequencies), len(distances)))\n",
     "\n",
-    "df_matrix = np.empty((len(frequencies), len(distances)))\n",
+    "mic_idx = 1\n",
     "\n",
-    "for j, distance_cm in enumerate(distances):\n",
-    "    room = generate_room(distance_cm=distance_cm, single_mic=True, source='multi')\n",
-    "    \n",
-    "    signals_f = get_signals_f(room)\n",
-    "    spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER) # times x frequencies\n",
-    "    spec_time_avg = np.mean(spec, axis=0) \n",
-    "    df_matrix[:, j] = spec_time_avg"
+    "signal = signals['multi']\n",
+    "with progressbar.ProgressBar(max_value=len(distances)-1) as bar:\n",
+    "    for j, distance_cm in enumerate(distances):\n",
+    "        #room = generate_room(distance_cm=distance_cm, single_mic=True)\n",
+    "        #signals_f = get_signals_f(room, signal)\n",
+    "        #spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER) # times x frequencies\n",
+    "        #spec_time_avg = np.mean(spec, axis=0) \n",
+    "        #df_matrix[:, j] = spec_time_avg\n",
+    "        slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
+    "        #df_matrix[:, j] = np.mean(slice_mics, axis=0) \n",
+    "        df_matrix[:, j] = slice_mics[mic_idx]\n",
+    "        bar.update(j)"
    ]
   },
   {
@@ -341,12 +242,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frequencies_theo = get_frequencies(FS)\n",
-    "df_matrix_theo = np.empty((len(frequencies_theo), len(distances)))\n",
+    "from simulation import get_freq_slice_theory\n",
+    "df_matrix_theo = np.empty((len(frequencies), len(distances)))\n",
     "\n",
     "for j, distance_cm in enumerate(distances):\n",
-    "    H = generate_rir(distance_cm=distance_cm, single_mic=True)[0] # \n",
-    "    df_matrix_theo[:, j] = np.abs(H)"
+    "    slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
+    "    df_matrix_theo[:, j] = slice_mics[mic_idx]\n",
+    "    #H = generate_rir(frequencies, distance_cm=distance_cm, single_mic=False)[mic_idx] # \n",
+    "    #df_matrix_theo[:, j] = np.abs(H)"
    ]
   },
   {
@@ -375,8 +278,8 @@
    "source": [
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
-    "plt.pcolormesh(distances, frequencies_theo[freq_start:], np.log10(df_matrix_theo[freq_start:]))\n",
-    "matrix_slices(df_matrix_theo[freq_start:], frequencies_theo[freq_start:], distances)"
+    "plt.pcolormesh(distances, frequencies[freq_start:], np.log10(df_matrix_theo[freq_start:]))\n",
+    "matrix_slices(df_matrix_theo[freq_start:], frequencies[freq_start:], distances)"
    ]
   },
   {
@@ -423,12 +326,14 @@
    },
    "outputs": [],
    "source": [
+    "from simulation import get_setup, Y_OFFSET, D0\n",
     "distance_slices = [5, 10, 20, 30, 40, 50]\n",
     "\n",
     "max_frequency = 5000\n",
     "min_frequency = 1000\n",
     "freq_indices = np.where((frequencies < max_frequency) & (frequencies > min_frequency))[0]\n",
     "sparse_indices = np.linspace(freq_indices[0], freq_indices[-1], 32).astype(int)\n",
+    "\n",
     "\n",
     "fig, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
     "fig.suptitle('frequency slices')\n",
@@ -444,10 +349,17 @@
     "    slice_ = df_matrix[sparse_indices, idx]**2\n",
     "    axs[i].scatter(frequencies[sparse_indices], slice_, label=f'{d}cm', color='C1')\n",
     "    \n",
+    "    source, mic_positions = get_setup(distance_cm=d, single_mic=False)\n",
+    "    source_image = [source[0], -source[1]]\n",
+    "    mic = mic_positions[mic_idx] \n",
+    "    \n",
     "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
     "    # wavelength_constr = c / f_constr = distance\n",
-    "    d1 = 2 * np.sqrt((d * 1e-2 + Y_OFFSET)**2 + D0**2) # m\n",
-    "    f_constr = SPEED_OF_SOUND / (d1 - D0)  # Hz\n",
+    "    #d1 = 2 * np.sqrt((d * 1e-2 + Y_OFFSET)**2 + D0**2) # m\n",
+    "    #delta = d1 - D0\n",
+    "    delta = np.linalg.norm(source_image - mic) - np.linalg.norm(source - mic)\n",
+    "    \n",
+    "    f_constr = SPEED_OF_SOUND / delta  # Hz\n",
     "    [axs[i].axvline(x=f+1000, color='C1') for f in np.arange(2)*f_constr]\n",
     "    \n",
     "    fft = np.fft.rfft(slice_)[1:]\n",
